# vala-bug-vapi-namespaces

./: README.md  meson.build
src/: Bar.vala  Foo.vala  Main.vala
src/Exception/: PrintError.vala
